--- a/테마/힐링/index.html
+++ b/테마/힐링/index.html
@@ -191,7 +191,7 @@
                                             </ul>
                                         </div>
                                     </section>
-                                    <button class="btn btn-primary btn-xl" data-bs-dismiss="modal" type="button">
+                                    <button class="btn btn-primary btn-xl" data-bs-dismiss="modal" type="button" onclick="">
                                         <i class="fas fa-xmark me-1"></i>
                                         Add in mypage
                                     </button>
