--- a/메뉴/menu.html
+++ b/메뉴/menu.html
@@ -111,7 +111,7 @@
                         <hr>
                     </li>
                     
-                    <li><a href="../커뮤니티/index.html">Seeing Community</a><hr></li>
+                    <li><a href="/my">Seeing Community</a><hr></li>
                     <li><a href="/my">My Page</a><hr></li>
                 
                 </ul>
