--- a/지역/제주/main_in.html
+++ b/지역/제주/main_in.html
@@ -36,17 +36,19 @@
                 </div>
             </section>
             <section>
-                <ul class="region-nav">
-                    <li class="region-item"><a id="region-link" href="../제주/main_out.html" style="color: #17eeee;">#Jeju</a></li>
-                    <li class="region-item"><a id="region-link" href="../부산/main_out.html">#Busan</a></li>
-                    <li class="region-item"><a id="region-link" href="../서울/main_out.html">#Seoul</a></li>
-                    <li class="region-item"><a id="region-link" href="../경주/main_out.html">#Gyeongju</a></li>
-                    <li class="region-item"><a id="region-link" href="../강릉/main_out.html">#Gangneung</a></li>
-                    <li class="region-item"><a id="region-link" href="../여수/main_out.html">#Yeosu</a></li>
-                    <li class="region-item"><a id="region-link" href="../전주/main_out.html">#Jeonju</a></li>
-                    <li class="region-item"><a id="region-link" href="../춘천/main_out.html">#Chuncheon</a></li>
-                    <li class="region-item"><a id="region-link" href="../가평/main_out.html">#Gapyeong</a></li>
-                </ul>
+                <button id="region">
+                    <ul class="region-nav">
+                        <li class="region-item"><a id="region-link" href="../제주/main_out.html" style="color: #17eeee;">#Jeju</a></li>
+                        <li class="region-item"><a id="region-link" href="../부산/main_out.html">#Busan</a></li>
+                        <li class="region-item"><a id="region-link" href="../서울/main_out.html">#Seoul</a></li>
+                        <li class="region-item"><a id="region-link" href="../경주/main_out.html">#Gyeongju</a></li>
+                        <li class="region-item"><a id="region-link" href="../강릉/main_out.html">#Gangneung</a></li>
+                        <li class="region-item"><a id="region-link" href="../여수/main_out.html">#Yeosu</a></li>
+                        <li class="region-item"><a id="region-link" href="../전주/main_out.html">#Jeonju</a></li>
+                        <li class="region-item"><a id="region-link" href="../춘천/main_out.html">#Chuncheon</a></li>
+                        <li class="region-item"><a id="region-link" href="../가평/main_out.html">#Gapyeong</a></li>
+                    </ul>
+                </button>
             </section>
             <section>
                 <div class="container">
